# lc3-vm

./: .clang-tidy  CMakeLists.txt  CONVENTIONS.md  Makefile
include/: cpu.h  instructions.h  lc3.h  mem.h
src/: cpu.cpp  instructions.cpp  lc3.cpp  main.cpp
